# serializable_enum

./: .travis.yml  COPYRIGHT  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  search-index.js
examples/: content_format.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Index.js  trait.IndexMut.js
implementors/core/str/: trait.FromStr.js
serializable_enum/: index.html  macro.impl_as_ref_from_str!.html  macro.impl_as_ref_from_str.html  macro.serde_visitor!.html  macro.serde_visitor.html  macro.serializable_enum.html  serializable_enum.m.html  sidebar-items.js
src/: lib.rs
src/serializable_enum/: lib.rs.html
tests/: serializable_enum.rs
