[package]
authors = ["Christopher Brickley <brickley@gmail.com>"]
description = "Two macros for implementing serialization / deserialization for enums containing no data variants"
documentation = "https://open.frostly.com/serializable_enum"
keywords = ["serde", "enum", "serialization", "deserialization", "macro"]
license = "MIT/Apache-2.0"
name = "serializable_enum"
readme = "README.md"
repository = "https://github.com/frostly/serializable_enum"
version = "0.4.0"

[dependencies]
serde = "~1.0"

[dependencies.clippy]
optional = true
version = "^0.0"

[dev-dependencies]
serde_json = "~1.0"

[features]
nightly-testing = ["clippy"]
